# provenance-gate

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.claude/skills/drive-claude-science/: RECIPE.md  SKILL.md
.claude/skills/drive-claude-science/scripts/: cs_auth.sh  cs_drive.js  cs_provenance.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
design/: build_mock.py  build_skill.py  cockpit-design-brief.md  graph_fixtures.py  vendor_libs.py
design/skill_assets/: cockpit_template.html
docs/: CELL-SUPERSET-THEOREM.md  DESIGN-RATIONALE.md  GATE-VERIFICATION.md  HEADROOM.md  PBMC-ROLLOUT-RESULTS.md  PBMC-ROLLOUT-SCENARIO.md
evals/claude-science-rollouts/: README.md  pyproject.toml
evals/claude-science-rollouts/browser/: package-lock.json  package.json  protocol.json
evals/claude-science-rollouts/browser/src/: cli_runner.mjs  handlers.mjs  main.mjs  model_selection.mjs  observations.mjs  protocol.mjs  setup.mjs  turns.mjs
evals/claude-science-rollouts/browser/test/: cli_runner.test.mjs  handlers.test.mjs  main.test.mjs  model_selection.test.mjs  observations.test.mjs  protocol.test.mjs  setup.test.mjs  turns.test.mjs
evals/claude-science-rollouts/browser/test/fixtures/: delivery_hash_vectors.json  mock_boundary.mjs
evals/claude-science-rollouts/examples/pbmc-version-mix/: README.md  project.db
evals/claude-science-rollouts/scenarios/: pbmc_figure_package.json
evals/claude-science-rollouts/scenarios/fixtures/: pbmc_tiny_seed.csv
evals/claude-science-rollouts/src/claude_science_rollouts/: __init__.py  run_episode.py
evals/claude-science-rollouts/src/claude_science_rollouts/browser/: __init__.py  bridge.py  client.py  errors.py  protocol.py
evals/claude-science-rollouts/src/claude_science_rollouts/capture/: __init__.py  evidence.py
evals/claude-science-rollouts/src/claude_science_rollouts/oracle/: __init__.py  closure.py  detect.py  models.py  snapshot.py  verdict.py
evals/claude-science-rollouts/src/claude_science_rollouts/orchestration/: __init__.py  browser_driver.py  driver.py  episode.py  fake.py  models.py  prose.py  r1.py  turn.py
evals/claude-science-rollouts/src/claude_science_rollouts/persistence/: __init__.py  project_snapshot.py  responses.py  snapshots.py
evals/claude-science-rollouts/src/claude_science_rollouts/scenario/: __init__.py  checkpoints.py  compiler.py  spec.py
evals/claude-science-rollouts/tests/: operon_fixture.py  test_browser_bridge.py  test_browser_driver.py  test_checkpoints.py  test_closure.py  test_compile.py  test_oracle.py  test_orchestration.py  test_orchestration_episode.py  test_project_snapshot.py  test_prose.py  test_responses.py  test_run_episode.py  test_scenario.py  test_smoke.py  test_snapshot_lifecycle.py
src/provenance_gate/: __init__.py  activation.py  log.py  model.py  server.py  store.py  substrate.py
src/provenance_gate/adapters/: __init__.py
src/provenance_gate/adapters/cs_skill/: __init__.py  host_query_reader.py
src/provenance_gate/core/: __init__.py  audit.py  derive.py  model.py  ports.py  review_kit.py  subgraph.py  walk.py
tests/: conftest.py  test_activation.py  test_audit.py  test_build_mock.py  test_build_skill.py  test_cli.py  test_cs_skill_reader.py  test_derive.py  test_induced_subgraph.py  test_log.py  test_model.py  test_ports.py  test_review_kit.py  test_server.py  test_smoke.py  test_store.py  test_subgraph.py  test_substrate.py  test_walk.py  test_workspace.py
ui/: cockpit.html
