[project]
name = "provenance-gate"
version = "0.0.1"
description = "A deterministic, claim-level trust gate for agentic science, read-only over Claude Science."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []  # v0 is stdlib-only (sqlite3, http.server)

[project.scripts]
pg-serve = "provenance_gate.adapters.external.server:main"  # external surface entrypoint

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_gate"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
