[project]
name = "provenance-gate"
version = "0.0.1"
description = "A deterministic, claim-level trust gate for agentic science, read-only over Claude Science."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []  # v0 is stdlib-only (sqlite3, http.server)

[project.scripts]
pg-serve = "provenance_gate.adapters.external.server:main"  # external surface entrypoint

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# uv workspace: this package (the gate) stays dependencies = []. The eval harness lives as a separate
# member with its OWN pyproject + deps, so heavyweight browser/eval deps never land on the gate — it
# must keep inlining into the zero-dep Python-3.9 CS skill kernel.
[tool.uv.workspace]
members = ["evals/claude-science-rollouts"]

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_gate"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# core + cs_skill are inlined into a Python 3.9 CS skill kernel, so their annotations use Optional,
# not PEP-604 `X | None` (3.10+). Keep ruff (UP045/UP007) from "modernizing" them back.
"src/provenance_gate/core/*.py" = ["UP045", "UP007"]
"src/provenance_gate/adapters/cs_skill/*.py" = ["UP045", "UP007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
